test/library/standard/Sort/errors/errors-comparator.keyargs.good
errors-comparator.chpl:9: In function 'main':
errors-comparator.chpl:17: error: The comparator keyargs implements 'keyComparator' but does not correctly provide a 'key' method for int(64)
